--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.14.0",
     "mongoose": "^4.7.7",
     "morgan": "~1.7.0",
+    "multer": "^1.2.1",
     "pug": "~2.0.0-beta6",
     "serve-favicon": "~2.3.0"
   }
